--- a/scripts/articles/articles.css
+++ b/scripts/articles/articles.css
@@ -103,6 +103,10 @@
   margin-left: 0;
 }
 
+.article-content-container .default-content-wrapper a {
+  word-break: break-word;
+}
+
 @media (min-width: 600px) {
   .article-content-container {
     padding-top: 147px;
@@ -112,6 +116,10 @@
     padding: 0;
     margin: 0;
     max-width: 310px;
+  }
+
+  .articles-wrapper .article-content-container > .section {
+    padding: 3em 2em;
   }
 }
 
@@ -125,7 +133,7 @@
   }
 
   .articles-wrapper .article-content-container > .section {
-    padding-right: 0;
+    padding: 3em 0 3em 3.5em;
     grid-column: 1;
   }
 
